--- a/src/view/Celeiro/infoItem.html
+++ b/src/view/Celeiro/infoItem.html
@@ -118,7 +118,7 @@
         {%if mensagem == ''%}
         <div class="botoes-fim-cadastro">
             <a href="/inabilitarItemCeleiro" id="cancelar-cadastro"> <p>Descartar</p> </a>
-            <a href=/venderItemCeleiro id="cadastrar-cadastro"> <p>Vender</p> </a>
+            <a href="/venderItemCeleiro "id="cadastrar-cadastro"> <p>Vender</p> </a>
         </div>  
         {%else%}
         <div class="botoes-fim-cadastro">
