--- a/src/view/Armazem/edicaoProduto.html
+++ b/src/view/Armazem/edicaoProduto.html
@@ -79,89 +79,34 @@
     
     <div class="main">
         <h1>
-            Venda
-            <a href="/venda">
+            Produto do Armazém
+            <a href="/armazem">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
-
-        <form action="/escolherCliente" method="POST">
-
-            <fieldset name="listaFornecedor" class="dados-Top">
+        
+        <form action="/salvarDadosProduto" method="POST">
+            <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Contrato de Venda</legend>
+                    <legend>{{produto[0].nome_hortalica}}</legend>
+                </div>
+                             
+                <div class="write-block">
+                    <label>Quantidade por {{produto[0].contagem_hortalica}}:</label>
+                    <input type="number" name="quantidade" min=0 placeholder="00.0">
                 </div>
                 <div class="write-block">
-                    <label for="codCliente">Nome do cliente:</label>
-                    <select name="codCliente" id="codCliente" required>
-                        <option value="" disable="" hidden="">Selecione uma opção</option>
-                        {%for cliente in listaCliente%}
-                            <option value={{cliente.cod_cliente}}>{{cliente.nome_cliente}}</option> 
-                        {%endfor%}
-                    </select>
+                    <label>Validade da Hortaliça:</label>
+                    <input type="date" name="validade">
                 </div>
 
-                </br>
+            </fieldset>
+            
+            <button type="submit" class="btn_calcular" name="btn_calcular">Salvar</button>
 
-                <div class="radio-block">
-                    <label for="entreaga">Tipo da Entrega:</label>
-                    <p>
-                        <label>
-                            <input type="radio" name="entrega" value="COM TRANSPORTE" checked> Sem Transporte
-                        </label>
-                    </p>
-                    <p>
-                        <label>
-                            <input type="radio" name="entrega" value="SEM TRANSPORTE"> Com Transporte
-                        </label>
-                    </p>
-                </div>
-                
-                </br>
-                
-                <div class="radio-block">
-                    <label for="entreaga">Tipo de venda:</label>
-                    <p>
-                        <label onclick="imediato()">
-                            <input type="radio" name="venda" value="IMEDIATA" checked> Imediata
-                        </label>
-                    </p>
-                    <p>
-                        <label onclick="encomenda()">
-                            <input type="radio" name="venda" value="SOB ENCOMENDA" > Sob Encomenda
-                        </label>
-                    </p>
-                </div>
+        </form>
 
-                <div style="visibility: hidden;" class="write-block" id="dtEntrega">
-                    <label for="dataEntrega">Data da Entrega:</label>
-                    <input type="date" id="dataEntrega" name="dataEntrega">
-                </div>
-
-                
-                {%if mensagem == "DATA INVÁLIDA"%}
-                <p style="color: red;" class="mensagem">{{mensagem}}</p>
-                {%else%}
-                {%endif%}
-
-                
-                 
-                <button type="submit" class="btn_calcular" name="btn_calcular">Próximo</button>
-            </fieldset>         
-        </form>    
     </div>
-
-   </body>
-
-<script language="JavaScript">
-    function imediato() {
-        document.getElementById('dtEntrega').style.visibility = 'hidden';
-    }
-
-    function encomenda() {
-        document.getElementById('dtEntrega').style.visibility = 'visible';
-    }
-</script>
-
+</body>
 </html>
